--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,7 +18,7 @@ jobs:
 
     strategy:
       matrix:
-        service: ['gateway', 'learning', 'users', curriculum'']
+        service: ['gateway', 'learning', 'users', 'curriculum']
 
     runs-on: ubuntu-latest
 
