--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -111,6 +111,25 @@ learning:
     #   cpu: 300m
     #   memory: 600Mi
 
+curriculum:
+  create: true
+  name: curriculum
+  image:
+    name: nova-platform-api-curriculum
+    tag: *apptag
+  replicas: 1
+  service:
+    name: curriculum
+    port: 3003
+    targetPort: 3003
+  resources: {}
+    # requests:
+    #   cpu: 200m
+    #   memory: 400Mi
+    # limits:
+    #   cpu: 300m
+    #   memory: 600Mi
+
 env:
 - name: "HOST"
   value: "database"
@@ -152,3 +171,5 @@ env:
   value: "rabbitmq"
 - name: RABBITMQ_URL
   value: amqp://rabbitmq:5672
+- name: CURRICULUM_SERVICE_PORT
+  value: 3003
