--- a/helm/templates/nova-api-postgres.yaml
+++ b/helm/templates/nova-api-postgres.yaml
@@ -65,13 +65,19 @@ spec:
             - name: {{ $value.name }}
               value: "{{ $value.value }}"
             {{- end }}
-            - name: "GATEWAY_HOST"
-              value: "{{ include "nova-api.fullname" . }}.{{.Release.Namespace}}.svc.cluster.local"
+            - name: POSTGRES_PASSWORD
+              value: {{ .Values.POSTGRES_PASSWORD }}
+            - name: POSTGRES_USER
+              value: {{ .Values.POSTGRES_USER }}
+            - name: POSTGRES_DB
+              value: {{ .Values.POSTGRES_DB }}
+            - name: DATABASE_PORT
+              value: {{ .Values.DATABASE_PORT }}
           # command: ["npx"]
           # args: ["nest", "start", "gateway", "--watch"]
           ports:
             - name: http
-              containerPort: 5432
+              containerPort: {{ .Values.DATABASE_PORT }}
               protocol: TCP
           livenessProbe:
             null
