--- a/apps/curriculum/Dockerfile
+++ b/apps/curriculum/Dockerfile
@@ -2,13 +2,13 @@ FROM node:22-alpine AS development
 WORKDIR /usr/src/server
 
 ARG CURRICULUM_SERVICE_PORT
-ARG POSTGRES_PASSWORD
-ARG ENV_FILE
+# ARG POSTGRES_PASSWORD
+# ARG ENV_FILE
 
-ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+# ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
 COPY package*.json ./
-COPY ${ENV_FILE} ./
+# COPY ${ENV_FILE} ./
 COPY ./apps ./
 COPY nest-cli.json ./
 COPY tsconfig*.json ./
@@ -21,6 +21,8 @@ EXPOSE ${CURRICULUM_SERVICE_PORT}
 
 
 FROM development AS production
+
+WORKDIR /usr/src/server
 
 COPY --from=development /usr/src/server/node_modules ./node_modules
 COPY --from=development /usr/src/server/package*.json ./
