--- a/apps/learning/Dockerfile
+++ b/apps/learning/Dockerfile
@@ -3,13 +3,13 @@ FROM node:22-alpine AS development
 WORKDIR /usr/src/server
 
 ARG LEARNING_SERVICE_PORT
-ARG POSTGRES_PASSWORD
-ARG ENV_FILE
+# ARG POSTGRES_PASSWORD
+# ARG ENV_FILE
 
-ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+# ENV POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
 COPY package*.json ./
-COPY ${ENV_FILE} ./
+# COPY ${ENV_FILE} ./
 COPY ./apps ./
 COPY nest-cli.json ./
 COPY tsconfig*.json ./
