feat: add  cors multipal allowed  urls

--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,10 @@ APP_DOMAIN= # sth like novaenglish.by
 DEFAULT_API_VERSION=1
 
 # Service ports
-FRONTEND_URL=http://localhost:8000
+FRONTEND_URL=
+QA1_URL=
+QA2_URL=
+PROD_URL=
 
 GATEWAY_HOST=gateway
 GATEWAY_PORT=3000
